--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <nav id="navbar1" class="navbar bg-body-tertiary">
   <div class="container-fluid d-flex align-items-center">
 
-    <span class="me-auto">CAPACIDADE</span>
+    <span class="me-auto">HUB</span>
 
     <!-- LETREIRO DIGITAL -->
     <div id="letreiro-container">
@@ -51,7 +51,7 @@
 
 <!-- ----------------Barra lateral------------------->
     <div class="sidebar" id="sidebar">
-      <img id="img-sew" src="icons/SEW_LOGO.svg.png" alt="">
+      <img id="img-sew" src="icons\_grandesite-removebg-preview.png" alt="">
       <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
 
     <ul>
@@ -84,7 +84,7 @@
     <div id="loginModal" class="login-modal hidden">
   <div class="login-box">
     <h2>Login</h2>
-    <img id="login-sew" src="icons\2.png" alt="">
+    <img id="login-sew" src="icons\@grandesite.png" alt="">
     <form id="loginForm">
       <input type="text" id="loginUser" placeholder="Usuário" autocomplete="username">
       <input type="password" id="loginPass" placeholder="Senha" autocomplete="current-password">
@@ -106,27 +106,27 @@
 <div class="botoes-da-pagina">
     <button id="casa1" type="button" class="btn btn-light">
     <img id="casinha" src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="" width="20" class="me-2">
-        Predio 110</br></br>RI</button>
+        Predio 1</br></br>Exemplo 1</button>
 
 <button id="casa2" type="button" class="btn btn-light">
     <img id="casinha" src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="" width="20" class="me-2">
-        Predio 120</br></br>Usinagem de Aço</button>
+        Predio 2</br></br>Exemplo 2</button>
 
 <button id="casa3" type="button" class="btn btn-light">
     <img id="casinha" src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="" width="20" class="me-2">
-        Predio 130</br></br>Tratamento Térmico e Acabamento</button></button>
+        Predio 3</br></br>Exemplo 3</button></button>
 
 <button id="casa4" type="button" class="btn btn-light">
     <img id="casinha" src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="" width="20" class="me-2">
-        Predio 140</br></br>Estamparia e Injeção</button></button>
+        Predio 4</br></br>Exemplo 4</button></button>
 
 <button id="casa5" type="button" class="btn btn-light">
     <img id="casinha" src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="" width="20" class="me-2">
-        Predio 150</br></br>Usinagem de FoFo</button></button>
+        Predio 5</br></br>Exemplo 5</button></button>
 
 <button id="casa6" type="button" class="btn btn-light">
     <img id="casinha" src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="" width="20" class="me-2">
-        Predio 170</br></br>Bobinagem</button></button>
+        Predio 6</br></br>Exemplo 6</button></button>
 </div>
 
 <!-- --------------------backend------------------ -->
