--- a/paginas/ri.html
+++ b/paginas/ri.html
@@ -52,7 +52,7 @@
 
 <!-- ----------------Barra lateral------------------->
     <div class="sidebar" id="sidebar">
-      <img id="img-sew" src="/icons/SEW_LOGO.svg.png" alt="">
+      <img id="img-sew" src="/icons/_grandesite-removebg-preview.png" alt="">
       <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
 
     <ul>
@@ -85,7 +85,7 @@
       <div id="loginModal" class="login-modal hidden">
   <div class="login-box">
     <h2>Login</h2>
-    <img id="login-sew" src="/icons/2.png" alt="">
+    <img id="login-sew" src="/icons/@grandesite.png" alt="">
     <form id="loginForm">
       <input type="text" id="loginUser" placeholder="Usuário" autocomplete="username">
       <input type="password" id="loginPass" placeholder="Senha" autocomplete="current-password">
