--- a/paginas/estamparia.html
+++ b/paginas/estamparia.html
@@ -49,24 +49,24 @@
 
     <ul>
     <a id="click1" href="../index.html"><span>
-      <img id="icons-barra" src="/icons/casinha2.png" alt="">
+      <img id="icons-barra" src="./icons/casinha2.png" alt="">
     </span ><p id="espaco">Início</p></a>
     <a id="click2" href="mailto:contato@empresa.com
     ?subject=Relatório%20CSV
     &body=Olá,%0AGostaria%20de%20falar%20sobre%20o%20relatório."><span>
-      <img id="icons-barra2" src="/icons/email2.png" alt="">
+      <img id="icons-barra2" src="./icons/email2.png" alt="">
     </span ><p id="espaco">E-mail</p></a>
     <a id="click3"><span>
-      <img id="icons-barra3" src="/icons/grafico2.png" alt="">
+      <img id="icons-barra3" src="./icons/grafico2.png" alt="">
     </span ><p id="espaco">Capacidade Anual</p></a>
     <a id="click4"><span>
-      <img id="icons-barra4" src="/icons/mensal2.png" alt="">
+      <img id="icons-barra4" src="./icons/mensal2.png" alt="">
     </span ><p id="espaco">Capacidad Mensal</p></a>
     <a href="#" id="loginLink" class="sidebar-link"><span>
-      <img id="icons-barra5" src="/icons/usuario2.png" alt="">
+      <img id="icons-barra5" src="./icons/usuario2.png" alt="">
     </span ><p id="espaco">Usuario</p></a>
     <a id="click6"><span>
-      <img id="icons-barra6" src="/icons/config2.png" alt="">
+      <img id="icons-barra6" src="./icons/config2.png" alt="">
     </span ><p id="espaco">Configurações</p></a>
     <a href="#" id="userInfo" class="sidebar-link hidden">
   <span id="userName"></span>
