--- a/paginas/estamparia.html
+++ b/paginas/estamparia.html
@@ -54,7 +54,7 @@
     <a id="click2" href="mailto:contato@empresa.com
     ?subject=Relatório%20CSV
     &body=Olá,%0AGostaria%20de%20falar%20sobre%20o%20relatório."><span>
-      <img id="icons-barra2" src="./icons/email2.png" alt="">
+      <img id="icons-barra2" src="../icons/email2.png" alt="">
     </span ><p id="espaco">E-mail</p></a>
     <a id="click3"><span>
       <img id="icons-barra3" src="./icons/grafico2.png" alt="">
