--- a/paginas/tratamento-termico.html
+++ b/paginas/tratamento-termico.html
@@ -77,7 +77,7 @@
       <div id="loginModal" class="login-modal hidden">
   <div class="login-box">
     <h2>Login</h2>
-    <img id="login-sew" src="/icons/@grandesite.png" alt="">
+    <img id="login-sew" src="../icons/@grandesite.png" alt="">
     <form id="loginForm">
       <input type="text" id="loginUser" placeholder="Usuário" autocomplete="username">
       <input type="password" id="loginPass" placeholder="Senha" autocomplete="current-password">
