--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 </nav>
 
 <!-- ---------------------------------------- -->
-<img src="icons/_grandesite-removebg-preview.png" style="border:2px solid red; width:200px;">
+
 
 
 <!-- ----------------Barra lateral------------------->
     <div class="sidebar" id="sidebar">
-      <img id="img-sew" src="icons/_grandesite-removebg-preview.png" alt="">
+      <img id="img-sew" src="icons/empresa.png" alt="">
       <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
 
     <ul>
