--- a/paginas/ri.html
+++ b/paginas/ri.html
@@ -52,7 +52,7 @@
 
 <!-- ----------------Barra lateral------------------->
     <div class="sidebar" id="sidebar">
-      <img id="img-sew" src="../icons/_grandesite-removebg-preview.png" alt="">
+      <img id="img-sew" src="../icons/empresa.png" alt="">
       <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
 
     <ul>
