--- a/paginas/estamparia.html
+++ b/paginas/estamparia.html
@@ -21,7 +21,7 @@
 <nav id="navbar1" class="navbar bg-body-tertiary">
   <div class="container-fluid d-flex align-items-center">
 
-    <span class="me-auto">Estamparia e Injeção</span>
+    <span class="me-auto">Exemplo 4</span>
 
     <!-- LETREIRO DIGITAL -->
     <div id="letreiro-container">
