--- a/paginas/ri.html
+++ b/paginas/ri.html
@@ -29,7 +29,7 @@
 <nav id="navbar1" class="navbar bg-body-tertiary">
   <div class="container-fluid d-flex align-items-center">
 
-    <span class="me-auto">RI</span>
+    <span class="me-auto">Exemplo 1</span>
 
     <!-- LETREIRO DIGITAL -->
     <div id="letreiro-container">
