--- a/paginas/tratamento-termico.html
+++ b/paginas/tratamento-termico.html
@@ -21,7 +21,7 @@
 <nav id="navbar1" class="navbar bg-body-tertiary">
   <div class="container-fluid d-flex align-items-center">
 
-    <span class="me-auto">Tratamento Térmico e Acabamento</span>
+    <span class="me-auto">Exemplo 3</span>
 
     <!-- LETREIRO DIGITAL -->
     <div id="letreiro-container">
