--- a/paginas/usinagem-aco.html
+++ b/paginas/usinagem-aco.html
@@ -21,7 +21,7 @@
 <nav id="navbar1" class="navbar bg-body-tertiary">
   <div class="container-fluid d-flex align-items-center">
 
-    <span class="me-auto">Usinagem de Aço</span>
+    <span class="me-auto">Exemplo 2</span>
 
     <!-- LETREIRO DIGITAL -->
     <div id="letreiro-container">
