--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>SEW</title>
+  <title>Projeto-Vitrine</title>
 
   <!-- Bootstrap CSS -->
   <link 
